# Arizona-Lead-Tracker

./: .env.example  .gitignore  Makefile  README.md  capture-fb.ps1  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.browser  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: e8afdf049539_initial_multi_tenant_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  deps.py  keywords.py  leads.py  sources.py  status.py
backend/app/core/: config.py  database.py  logging.py  security.py
backend/app/models/: __init__.py  base.py  tables.py
backend/app/monitors/: __init__.py  base.py  facebook.py  facebook_browser.py  facebook_parser.py  fb_session.py  reddit.py  reddit_client.py  reddit_parser.py  x.py  x_client.py  x_parser.py
backend/app/notifiers/: __init__.py  base.py  email.py  telegram.py
backend/app/schemas/: __init__.py  admin.py  auth.py  lead.py  raw_post.py
backend/app/services/: config_status.py  dedup.py  facebook_group.py  heuristic_scoring.py  keyword_matcher.py  scoring.py
backend/app/tasks/: __init__.py  celery_app.py  jobs.py  notify.py  pipeline.py
backend/scripts/: __init__.py  capture_fb_session.py  capture_fb_windows.py  fb_dom_probe.py  fb_live_test.py  seed.py
backend/tests/api/: conftest.py  test_auth.py  test_keywords.py  test_leads.py  test_sources.py  test_status.py
backend/tests/unit/: test_config_status.py  test_dedup.py  test_facebook_group.py  test_facebook_monitor.py  test_facebook_parser.py  test_fb_session.py  test_heuristic_scoring.py  test_jwt.py  test_keyword_matcher.py  test_models.py  test_monitor_base.py  test_notifiers.py  test_notify.py  test_pipeline.py  test_raw_post.py  test_reddit_monitor.py  test_reddit_parser.py  test_scoring.py  test_security.py  test_seed.py  test_x_client.py  test_x_monitor.py  test_x_parser.py
docs/: RESUME.md
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: ConfigBanner.tsx  Keywords.tsx  Leads.tsx  Login.tsx  Sources.tsx
frontend/src/lib/: api.ts
