[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arizona-lead-tracker"
version = "0.1.0"
description = "Multi-tenant social-media lead-detection system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "anthropic>=0.40",
    "httpx>=0.27",
    "tenacity>=9.0",
    "cryptography>=43.0",
    "pyjwt>=2.10",
    "email-validator>=2.2",
    "python-multipart>=0.0.12",
    # Platform collectors
    "praw>=7.8",
    "playwright>=1.49",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "fakeredis>=2.26",
    "respx>=0.21",
    "freezegun>=1.5",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: pure-logic tests, no external services",
    "integration: requires Postgres/Redis/network",
    "browser: requires Playwright + a real browser session",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
omit = ["app/tasks/celery_app.py", "app/tasks/jobs.py", "app/main.py", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "C4"]
ignore = [
    "S101",   # asserts are fine in tests
    "UP042",  # keep (str, Enum): stores enum .value cleanly via SQLAlchemy and
              # keeps stable str()/format() semantics vs enum.StrEnum
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B"]
"scripts/**" = ["S"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends/Security in argument defaults is the framework's idiom, not
# the mutable-default footgun B008 targets.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Security", "fastapi.Query"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = true
